fix: stop index.html h2 clipping side of screen on tablets or smaller

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ hr::after {
 }
 
 #play-box h2 {
-    margin: 20px 0;
+    margin: 20px 15px;
 }
 
 #intro-button-box {
